@@ -9,16 +9,12 @@ public class HexUtils {
 
     /**
      * 二进制byte数组转十六进制byte数组
-     * byte array to hex
-     *
-     * @param b byte array
-     * @return hex string
      */
     public static String byte2hex(byte[] b) {
         StringBuilder hs = new StringBuilder();
         String stmp;
-        for (int i = 0; i < b.length; i++) {
-            stmp = Integer.toHexString(b[i] & 0xFF).toUpperCase();
+        for (byte value : b) {
+            stmp = Integer.toHexString(value & 0xFF).toUpperCase();
             if (stmp.length() == 1) {
                 hs.append("0").append(stmp);
             } else {
@@ -30,10 +26,6 @@ public class HexUtils {
 
     /**
      * 十六进制byte数组转二进制byte数组
-     * hex to byte array
-     *
-     * @param hex hex string
-     * @return byte array
      */
     public static byte[] hex2byte(String hex)
             throws IllegalArgumentException {
@@ -45,16 +37,13 @@ public class HexUtils {
         for (int i = 0, j = 0, l = hex.length(); i < l; i++, j++) {
             String swap = "" + arr[i++] + arr[i];
             int byteint = Integer.parseInt(swap, 16) & 0xFF;
-            b[j] = new Integer(byteint).byteValue();
+            b[j] = Integer.valueOf(byteint).byteValue();
         }
         return b;
     }
 
     /**
      * 将Base64编码的RSA加密结果转换为16进制字符串
-     * @param base64Str Base64编码的加密字符串
-     * @return 16进制字符串（小写，无分隔符）
-     * @throws IllegalArgumentException 输入非合法Base64时抛出异常
      */
     public static String base64ToHex(String base64Str) {
         if (base64Str == null || base64Str.isEmpty()) {
